# ds-job-auxillary-insights

./: .env.example  .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml
docs/: ARCHITECTURE.md  CHATGPT_QUICK_START.md  CODING_STANDARDS.md  GITHUB_COPILOT.md  VALIDATION_EXAMPLE.md  database-configuration.md  feedback-loop.md  output-formats.md  quick-reference.md  qwen-integration.md  updating-rules.md
scripts/: analyze_corrections.py  analyze_patterns.py  import_corrections.py  test_feedback_integration.py
src/: __init__.py
src/analyzer/: __init__.py  job.py
src/classifier/: __init__.py  categories.py  classifier.py  feedback.py  rules.py
src/cli/: __init__.py  main.py
src/cli/formatters/: __init__.py  base.py  csv.py  json.py  text.py
src/db/: __init__.py  queries.py
tests/: __init__.py  test_classifier.py  test_feedback.py
